syntax = "proto3";

package prehog.v1alpha;

import "google/protobuf/timestamp.proto";

message ConnectUserLoginEvent {
  // anonymized
  string cluster_name = 1;
  // anonymized
  string user_name = 2;
  // empty for local or github/saml/oidc
  string connector_type = 3;

  // TODO(espadolini): should passwordless be a flag?
}

message ConnectReportingServiceSubmitEventRequest {
  // anonymized
  string distinct_id = 1;

  // optional, will default to the ingest time if unset
  google.protobuf.Timestamp timestamp = 2;

  oneof event {
    ConnectUserLoginEvent user_login = 3;
  }
}

message ConnectReportingServiceSubmitEventResponse {}

service ConnectReportingService {
  rpc SubmitEvent(ConnectReportingServiceSubmitEventRequest) returns (ConnectReportingServiceSubmitEventResponse) {}
}
