syntax = "proto3";

package prehog.v1alpha;

import "google/protobuf/timestamp.proto";

message IdentifyAccountRequest {
  string account_id = 1;
  string marketing_id = 2;
  string license_name = 3;
  bool is_cloud = 4;
  bool is_trial = 5;
}
message IdentifyAccountResponse {}

message UpdateAccountRequest {
  string account_id = 1;
  string old_account_id = 2;
  string license_name = 3;
  bool is_cloud = 4;
  bool is_trial = 5;
}
message UpdateAccountResponse {}

message UIOnboardDomainNameTCSubmitEvent {}
message UIOnboardGoToDashboardClickEvent {}

message SubmitSalesEventRequest {
  string account_id = 1;
  google.protobuf.Timestamp timestamp = 2;

  oneof event {
    UIOnboardDomainNameTCSubmitEvent ui_onboard_domain_name_tc_submit = 3;
    UIOnboardGoToDashboardClickEvent ui_onboard_go_to_dashboard_click = 4;
  }
}
message SubmitSalesEventResponse {}

service SalesReportingService {
  rpc IdentifyAccount(IdentifyAccountRequest) returns (IdentifyAccountResponse) {}
  rpc UpdateAccount(UpdateAccountRequest) returns (UpdateAccountResponse) {}
  rpc SubmitSalesEvent(SubmitSalesEventRequest) returns (SubmitSalesEventResponse) {}
}
